--- a/config/application.yml
+++ b/config/application.yml
@@ -3,6 +3,7 @@ defaults: &defaults
   redis_db: 10
   redis_host: localhost
   redis_namespace: i18n
+  redis_url:
 
 development:
   <<: *defaults
@@ -11,6 +12,10 @@ development:
 test:
   <<: *defaults
   redis_db: 12
+
+qa:
+  <<: *defaults
+  redis_url: redis://redistogo:826e8d4875767d4d8dc8935fb35d9d21@icefish.redistogo.com:9390
 
 production:
   <<: *defaults
